<resources>
    <string name="app_name">Рейтинг ФКБ ТЭК</string>
    <string name="title_activity_main">Главная</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_rating">My Rating</string>
    <string name="menu_top">Top</string>
    <string name="menu_by_group">Rating By Group</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="by_faculty">By faculty</string>
    <string name="by_group">By group</string>

</resources>
