<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_rating" />

        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_top" />

        <item
            android:id="@+id/nav_by_group"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_by_group" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
